处理器注册